# anymal_custom_control

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  requirements.txt
.claude/: DEVELOPMENT_NOTES.md  LPC_config.md  candle_ros_docker.md  settings.local.json
.codex/: cvxpy_ws.md  cvxpy_ws_refactor_plan.md
catkin_ws/src/anymal_custom_control/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/anymal_custom_control/scripts/: AUTO_anymal_arm_traj.py  RUN_anymal_setpoint_navigation.py  RUN_anymal_teleop_joystick.py  RUN_arm_teleop_jointspace.py  RUN_arm_teleop_taskspace.py  RUN_giraf_coord_teleop.py  RUN_giraf_teleop.py  discover_topics.py  monitor.py  probe_msg.py  run_camera_web.py  run_teleop_joystick.py  run_teleop_keyboard.py  teleop.py  teleop_switchmodes.py
catkin_ws/src/anymal_custom_control/scripts/camera/: anymal_camera_views.py  endpoint_camera_apriltag_stream.py  endpoint_camera_stream.py
catkin_ws/src/anymal_custom_control/scripts/trajectories/: SRC_demo_031726_r0p5.py  SRC_demo_031726_r2.py  SRC_demo_obstacle_031726_r0p5.py  SRC_demo_obstacle_031726_r2.py  demo1_3x_task_r0p5.py  demo1_3x_task_r0p75.py  demo1_3x_task_r1p5.py
catkin_ws/src/anymal_custom_control/src/anymal_custom_control/: RRP_kinematic_model.py  __init__.py  camera.py  joystick_driver.py  modes.py  motor_driver.py  movement.py
catkin_ws/src/joy_manager_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/joy_manager_msgs/msg/: AnyJoy.msg
catkin_ws/src/operational_mode_manager_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/operational_mode_manager_msgs/action/: SwitchOperationalMode.action
cvxpy_ws/: README.md  RUN.py  RUN_demo.py  plot_scp_animation.py  plot_scp_optimal_traj.py  plot_trajectories.py  run_sweep.py  task.py  traj_opt.py
cvxpy_ws/archive/SRC demo1 3_12_26/: task.py  traj_opt.py
cvxpy_ws/archive/task 3x w no obstacle/: task.py  traj_opt.py
cvxpy_ws/archive/traj 3x w obstacle SCP/: scp_history1.csv  scp_history2.csv  scp_history3.csv  task_w_obstacle.py  traj_opt_w_obstacle.py
cvxpy_ws/data/: scp_history4.csv
cvxpy_ws/force_penalty/: penalty_model.md  penalty_model.py  visualize_force_accuracy_penalty.py  visualize_force_penalty.py
cvxpy_ws/plots/demo1/: traj_opt.py
cvxpy_ws/tasks/: SRC_demo_031726_r0p5.py  SRC_demo_031726_r2.py  SRC_demo_obstacle_031726_r0p5.py  SRC_demo_obstacle_031726_r2.py  TASK_demo.py  TASK_demo_w_forces.py
cvxpy_ws/trajectory_opt/: anymal_export.py  solver.py  visualizer.py  visualizer_2x.py
