<?xml version="1.0"?>
<package format="2">
  <name>anymal_custom_control</name>
  <version>0.1.0</version>
  <description>Custom Python API for ANYmal robot movement and camera access</description>
  <maintainer email="stanleywang@example.com">Stanley Wang</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>joy_manager_msgs</exec_depend>
</package>
