<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>joy_manager_msgs</name>
  <version>0.6.24</version>
  <description>The joy_manager package</description>
  <author email="lisler@anybotics.com">Linus Isler</author>
  <maintainer email="msuetterlin@anybotics.com">Marco Sütterlin</maintainer>
  <maintainer email="lisler@anybotics.com">Linus Isler</maintainer>
  <license>Proprietary</license>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">message_generation</depend>
  <depend condition="$ROS_VERSION == 1">message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
