<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>operational_mode_manager_msgs</name>
  <version>0.0.1</version>
  <description>Minimal operational_mode_manager message definitions for ANYmal mode switching.</description>
  <maintainer email="todo@todo.com">Stanley Wang</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
</package>
